WaitingRoomNetworkManager 1차완성
- 서버 및 클라이언트로 소켓 연결됨
- 관련된 수많은 에러 핸들링 완료
- 대기실에서 게임모드 및 Ready 상태 동기화 됨
- 1명이 나갈 시에 상대편에게 나갔다는걸 알려줌
- Disconnected 시 핸들링 추가함 (관련 버그 수정 필요)