@@ -1,11 +1,10 @@
 package org.example.controller;
 
+import javafx.application.Platform;
 import javafx.scene.Scene;
 import javafx.scene.input.KeyEvent;
 
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
 import java.net.ServerSocket;
 import java.net.Socket;
 
@@ -18,8 +17,7 @@ import org.example.view.ServerConnectionView;
 public class ServerConnectionController extends BaseController {
 
     private final ServerConnectionView view;
-    private Thread serverThread;
-    private ServerSocket serverSocket;
+    private Thread acceptThread;
 
     public ServerConnectionController() {
         this.view = new ServerConnectionView();
@@ -32,7 +30,7 @@ public class ServerConnectionController extends BaseController {
         var root = view.createView(ip, this::handleGoBack);
         createDefaultScene(root);
 
-        startServer();
+        startAccept();
 
         return scene;
     }
@@ -41,16 +39,19 @@ public class ServerConnectionController extends BaseController {
         popState();
     }
 
-    private void startServer() {
-        serverThread = new Thread(() -> {
+    private void startAccept() {
+        //already bind 에러 핸들링 추가필요
+        acceptThread = Thread.startVirtualThread(() -> {
             try {
                 System.out.println("waiting for client connection in port 54673...");
-                serverSocket = new ServerSocket(54673);
-                
+
+                ServerSocket serverSocket = new ServerSocket(54673);
                 Socket client = serverSocket.accept(); // 클라이언트 접속 대기
+                serverSocket.close();
 
                 System.out.println("Client connected from " + client.getInetAddress().getHostAddress());
-                swapState(new WaitingRoomController(client.getInetAddress().getHostAddress(), true));
+                
+                Platform.runLater(() -> swapState(new WaitingRoomController(client, true)));
 
             } catch (IOException ie) {
                 if (Thread.currentThread().isInterrupted()) {
@@ -60,26 +61,17 @@ public class ServerConnectionController extends BaseController {
                 }
             }
         });
-        serverThread.setDaemon(true);
-        serverThread.start();
     }
 
-    private void closeServer() {
-        if (serverThread != null && serverThread.isAlive()) {
-            serverThread.interrupt();
-        }
-        if (serverSocket != null && !serverSocket.isClosed()) {
-            try {
-                serverSocket.close();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
+    private void closeThread() {
+        if (acceptThread != null && acceptThread.isAlive()) {
+            acceptThread.interrupt();
         }
     }
 
     @Override
     protected void exit() {
-        closeServer();
+        closeThread();
     }
 
     @Override
